manifestfiles/mywebapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp-deployment
spec:
  selector:
    matchLabels:
      name: mywebapp
  template:
    metadata:
      labels:
        name: mywebapp
    spec:
      containers:
        - name: webapp-container
          image: dockers766/myweb-app-java
          ports:
            - containerPort: 8080
