manifestfiles/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-svc-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: mywebapp-service
