manifestfiles/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: mywebapp
